--- a/wiki/Future.wiki
+++ b/wiki/Future.wiki
@@ -2,7 +2,25 @@ How i imagine the evolution of this project.
 
 = Introduction =
 
-Currently it makes the navigation dropdowns and buttons. The idea is to speed the design developement as much as possible. For example add facebook intergration and twitter or jquery and other libraries.
+Currently it makes the navigation dropdowns and buttons using php functions. The idea is to speed the design developement as much as possible for prototyping. 
 
-= Details =
-If you are interested and you would like to get involved, let me know.
+= Things to do =
+
+Create the following using php arrays
+- do tabs
+- collapse
+- carousel
+
+UI elemenrs
+- Modals, pop overs etc
+- Add a calendar dropdown.
+
+Add more Social elements
+- Facebook php intergration (check http://www.faceconn.com for example)
+- Show twitter feeds (already ready)
+- Google plus
+
+Other ideas, 
+You have to compile bootstrap everytime to get new colors. We could make a bootstrap color creator that creates new color combinations. Or precompile a few versions of boot strap with different colors.
+
+The Whole project does not care about efficiency at this stage but its main aim is to help developers speed up the process of prototyping.
